# the-pun-machine

./: Cargo.toml  data.mp  index.html  readme.md  tasks.md  the-pun-machine-11a54de9353a1ccf.js  the-pun-machine-11a54de9353a1ccf_bg.wasm  the-pun-machine-2f0665412d78451c.js  the-pun-machine-2f0665412d78451c_bg.wasm  the-pun-machine-478abf376c473dab.js  the-pun-machine-478abf376c473dab_bg.wasm  the-pun-machine-57a4682340df4c23.js  the-pun-machine-57a4682340df4c23_bg.wasm  the-pun-machine-a3e373c7f0658641.js  the-pun-machine-a3e373c7f0658641_bg.wasm  the-pun-machine-b1ef57e7b6b6b2de.js  the-pun-machine-b1ef57e7b6b6b2de_bg.wasm  the-pun-machine-ef701b6b0c00276f.js  the-pun-machine-ef701b6b0c00276f_bg.wasm
benches/: bench.rs
data/categories/: Artists.txt  Bands.txt  Books.txt  Brands.txt  ChristmasSongs.txt  CommonWords.txt  Countries.txt  Idioms.txt  MovieQuotes.txt  Movies.txt  Musicals.txt  Songs.txt  TVShows.txt  ThemeSuggestions.txt  Wedding.txt
data/other/: CommonWords.txt
data/syllables/: spelling.txt
src/: main.rs
src/core/: casing.rs  category.rs  dictionary_word.rs  mod.rs  phrase.rs  pun.rs  pun_category.rs  pun_replacement.rs  pun_strategy.rs  pun_type.rs  related_word.rs  word_dictionary.rs
src/core/pronounciation/: mod.rs  phoenetics_word.rs  syllable.rs  symbol.rs  symbol_arr.rs  symbol_type.rs
src/core/strategies/: homophone.rs  infix_rhyme.rs  mod.rs  perfect_rhyme.rs  prefix.rs  prefix_rhyme.rs  pun_strategy.rs  same_consonants.rs  shared_prefix.rs
src/state/: full_state.rs
src/web/: app.rs
tests/: my_tests.rs
